# BarcodeReaderAndWriter

./: BarcodeWriter.qml  CMakeLists.txt  Main.qml  README.md  ReadBarcode.qml  barcodereader.cpp  barcodereader.h  barcodewriter.cpp  barcodewriter.h  main.cpp
zxing-cpp/: CMakeLists.txt
